Fix horizontal scrolling

--- a/newcss.css
+++ b/newcss.css
@@ -32,6 +32,7 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: var(--text-color);
     background-color: var(--background-white);
+    /* overflow-x: hidden; */
 }
 
 a {
@@ -148,9 +149,10 @@ a {
 
 .img-portada {
     width: 100vw;
+    max-width: 100%;
     /* NEW CODE TO REVIEW */
-    height: auto;
-    object-fit: cover;
+    /* height: auto; */
+    /* object-fit: cover; */
 }
 
 .texto-portada {
